# pyjunk

./: .coverage  .env.template  .gitignore  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
scripts/: restore.sh
src/: __init__.py  main.py
tests/: conftest.py  test_example.py
